--- a/project/src/app/component/home/home.component.html
+++ b/project/src/app/component/home/home.component.html
@@ -1,5 +1,8 @@
 <navbar class="row p-0 m-0 sticky-top navtop" ></navbar>
-<div class="row container-fluid contain p-0 " [ngClass]="{'bg_black':!getmood()}">
+<div class="row container-fluid contain p-0 " 
+>
+<!-- [ngClass]="{'bg_black':!getmood()}"  -->
+
  
     <app-nav-aside class="col-3 p-0 mx-1  navleft"></app-nav-aside>
 <div class="row  col-8  mx-auto mt-5 cards"  >
