--- a/project/src/app/component/nav-aside/nav-aside.component.html
+++ b/project/src/app/component/nav-aside/nav-aside.component.html
@@ -1,7 +1,7 @@
 <aside class="m-0">
 
   <div class="row my-2 p-0 mx-auto">
-    <img class="logo" src="../../../assets/images/hand.jpg">
+    <!-- <img class="logo" src="../../../assets/images/hand.jpg"> -->
     <span class="logotext ">Blood Bank</span>
   </div>
   <hr class="my-4" />
@@ -21,8 +21,8 @@
     </a></li>
 
 
-    <li class="row liSearch p-0 m-0">
-      <i class="fas fa-search col-2 p-0"></i>
+    <li class="row liSearch p-1 m-0">
+      <i class="fas fa-search col-2 p-1"></i>
        
       <div class="col-10  m-0 p-0 ">
       <div id="contain_searsh" class=" p-0 m-0">
@@ -36,13 +36,12 @@
           </select>
           <a  (click)="submitval(optionselect.value)" class="col-2"><i class="fas fa-search"></i></a>
         </div>
-         <!-- <a  routerLink='/Users/{{optionselect}}'>
-             <i class="fas fa-search"></i></a>  -->
+      
     </div> 
   </div>
   </li>
 
-     
+    
   </ul>
 
 </aside>
