--- a/project/src/app/component/user-details/user-details.component.html
+++ b/project/src/app/component/user-details/user-details.component.html
@@ -2,7 +2,7 @@
   <navbar></navbar>
   <div class="container-fluid row m-0 p-0 bg-img cover">
 <app-nav-aside class="col-3 p-0 "></app-nav-aside>
-<div class=" col-8 ">
+<div class=" col-8 mx-auto">
   <h4 class=" text-center w-75 mx-auto  my-5"> users have same type blood
     <span class="text-primary pt-3">{{type}}</span>
   </h4 >
