--- a/project/src/app/component/home/home.component.css
+++ b/project/src/app/component/home/home.component.css
@@ -26,7 +26,8 @@ padding-left: 10px;}
 }
 .over{
   position:absolute;
-  background-color:rgb(0, 0, 255,.5);
+  /* background-color:#ed6761; */
+  background-image:linear-gradient(#ed6761, white);
   width:100%;
   height:100%;
   top: 0;
