--- a/project/src/app/component/navbar/navbar.component.html
+++ b/project/src/app/component/navbar/navbar.component.html
@@ -6,19 +6,19 @@
     aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse p-0 my-2" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mt-lg-0  row ">
-      <li class="logo  m-auto col-4"></li>
+  <div class="collapse navbar-collapse p-1 m-0" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mt-lg-0  row  m-0 ">
+      <li class="logo"></li>
 
-        <li class="col-3 ">
+        <!-- <li class="col-3 ">
            <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Home">Home
-        </a></li>
+        </a></li> -->
         <!-- <li class="col-3 mt-1">
           <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Users">Users
          </a></li> -->
     </ul>
 
-<div class="ml-auto row">
+<!-- <div class="ml-auto row"> -->
 <!-- <button class="my-md-0  "><i class="far fa-bell notIcon"></i>
   <span class="badge badge-secondary notNum">10</span>
 </button> -->
@@ -28,16 +28,16 @@
 </a> -->
 
 
-  </div>
+  <!-- </div> -->
 </div>
 <div class="dropdown  dropleft float-right">
-  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+  <button type="button" class="btn btn-primary dropdown-toggle p-0" data-toggle="dropdown">
     <!-- Dropdown button --><span class="span_admin ">{{admin}}</span>
   </button>
   <div class="dropdown-menu ">
-    <a class="dropdown-item" href="#">Link 1</a>
-    <a class="dropdown-item" href="#">Link 2</a>
-    <a class="dropdown-item" href="#">Link 3</a>
+    <a class="dropdown-item" routerLink='/profile'>profile</a>
+    <!-- <a class="dropdown-item" href="#">Link 2</a>
+    <a class="dropdown-item" href="#">Link 3</a> -->
     <div class="dropdown-divider"></div>
     <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/SignUp">create account</a>
     <div class="dropdown-divider"></div>
