--- a/project/src/app/component/posts/all-posts/all-posts.component.html
+++ b/project/src/app/component/posts/all-posts/all-posts.component.html
@@ -1,53 +1,80 @@
 
   <div class=" container-fluid row m-0 p-0 contain" [ngClass]="{'bg_black':!getmood()}">
     <navbar class="container-fluid col-12  p-0 m-0"></navbar>
-    <app-nav-aside class=" col-3  mr-2 p-0 "></app-nav-aside>
-  <div class=" containpost col-6 p-2 mt-2 p-0" >
+    <app-nav-aside class="asidleft col-3  mr-2 p-0"></app-nav-aside>
+  <div class=" containpost col-5 p-2 mt-2 p-0 mx-auto" id="top">
     <div *ngFor="let p of posts">
-      <div class="card  p-1 my-1">
+      <div class="_card mt-2 ">
           <div class="row p-0 m-0">
-        <div class="card-body col-8 mr-auto">
-          <h6 class="card-title">I need </h6>
+            <div class="col-12 top_card p-0 m-0 ">
+            <img class="cardimg " src={{p.user_imgURL}} alt="Card image cap"/>
+          
+          <span>{{p.postDate.split(' ')[0] }} </span>
+          </div>
+
+        <div class="card-body p-0 pl-4">
+          <h6 class="card-title">I need help</h6>
           <h6>
             <span>blood_type :</span>
             {{p.blood_type}}</h6>
-          <h6>
-            <span>City :</span>
+          
+            <h6><span>Government :</span>{{p.government}}</h6>
+           <h6> <span>City :</span>
             {{p.city}}</h6>
           <h6>
             <span>donatin Date :</span>
             {{p.donDate}}</h6>
-
+            
+            <div class=" p-0 pb-2 divbtn row">
+              <button class="btn" routerLink='/UserInfo/{{p.userID}}'> info user</button>
+               <!--{{p.userID}}  -->
+              <button class="btn " (click)="deletpost(p.key)">delete post</button>
+            </div>
+            
         </div>
-        <img class="cardimg col-3 p-0 m-0 " src={{p.user_imgURL}} alt="Card image cap"/>
-        <button class="btn btn-info "> info user</button>
-         <!--{{p.userID}}  -->
-        <button class="btn btn-info " (click)="deletpost(p.userID)">delete post</button>
+        
       </div>
     </div>
   </div>
-
-  <ul class="pagination  ulpagination row">
+  <ul class="pagination  ulpagination m-auto">
     <button class="btn_pre" (click)="btn_prev()" [disabled]="disable_pre">prev</button>
-
     <button (click)="select_Page(1)"  
       [ngClass]="{'btnblue':btn1.value==this.active_page}"
-
+  
           value="1" #btn1>1</button>  
-
+  
     <button (click)="select_Page(2)"
           value="2" #btn2  [ngClass]="{'btnblue':btn2.value==this.active_page}">
       2</button> 
-
+  
     <button (click)="select_Page(3)" value="3" #btn3 [ngClass]="{'btnblue':btn3.value==this.active_page}">
       3</button>
     <button value="4" (click)="select_Page(4 )"  #btn4 [ngClass]="{'btnblue':btn4.value==this.active_page}">4</button>
     <button value="5" (click)="select_Page(5 )" #btn5 [ngClass]="{'btnblue':btn5.value==this.active_page}">5</button>
     <button class="btn_next" (click)="next_btn()" [disabled]="disable_next">next</button>
-
+  
   </ul>
 </div>
-</div>
 
+</div>
+<!-- blood_type: 
+"A+"
+city: 
+"nasr city"
+donDate: 
+"31-7-2021"
+government: 
+"Cairo"
+name: 
+"Mahmoud Mohamed"
+postDate: 
+"2021-07-28 21:23:59.124546"
+userID: 
+"8uFL1iRDDYfXWC6PlWSyWZX1P1j2"
+user_email: 
+"mahmoud123@gmail.com"
+user_imgURL: 
+"https://firebasestorage.googleapis.com/v0/b/blo..." -->
+<!--  -->
 
   
