--- a/project/src/app/component/home/home.component.css
+++ b/project/src/app/component/home/home.component.css
@@ -1,28 +1,34 @@
 .contain{
-  /* background-color: rgb(207, 207, 207); */
-  background-color:rgba(253, 212, 212, 0.1);
+  
   margin: 0;
-  background-image: url('../../../assets/images/bg5.jpg');
+  /* background-image: url('../../../assets/images/bg5.jpg'); */
   background-repeat: no-repeat;
   object-fit:fill;
   background-size: 100% 100%;
-  /* opacity: .5; */
   /* background-image: linear-gradient(to right,hsla(240, 100%, 50%, 0.5),rgb(0, 0, 255,.2)); */
-
+height:95vh;
+/* background-color: rgb(177, 177, 255); */
+/* background-color:rgb(255, 237, 237); */
+/* background-color: whitesmoke */
+;
 }
-/* app-nav-aside{
-  /* height:150vh; 
-} */
+.navleft{
+  
+}
+
 .cards{
   padding: 0;
   display: flex;
   flex-wrap: wrap;
- 
-  justify-content:space-evenly;
-
+  /* justify-content:space-between; */
 padding-left: 10px;}
 .divCard{
+  width: 100%;
   height: fit-content;
+  /* border: 2px solid gray;
+  box-shadow: 2px 5px 5px rgb(246, 51, 51); */
+
+
 }
 .over{
   position:absolute;
@@ -41,25 +47,31 @@ padding-left: 10px;}
 }
 .BloodType{
   position: relative;
-  height:150px;
+  height:110px;
   width: 100%;
-  /* margin-right:5px; */
   border-radius: 20px;
   /* box-shadow: 2px 5px 5px rgb(246, 51, 51); */
-  padding: 10px;
-  box-sizing: border-box;
-  background-color: white ;
+   box-shadow: 2px 5px 5px gray;
+  /* border: 1px solid gray ;  */
+
+  padding:10px;
+  box-sizing:border-box;
+  background-color: white;
+  /* background-color:rgb(0, 0, 255); */
 /* background-color: #FC5A06; */
 }
 .bloodimg{
   margin: 5px;
   position: relative;
-  height: 50px;
-  background-color:red;
+  height:40px;
+  /* background-color:red; */
+background-image: url('../../../assets/images/blood2.png');
+background-size: 100% 100%;
+object-fit: fill;
   /* background-color: rgb(237,103,97); */
   color:white;
    /* top: -30px; */
-  align-items: center;
+  align-items:center;
   border-radius: 10px;
   z-index:10;
 
@@ -68,10 +80,11 @@ padding-left: 10px;}
 
 }
 .supscrip{
-  z-index: 10;
-  text-align:left;
+  width: 100%;
+  z-index:10;
+  /* text-align:left; */
   padding :0;
-  font-size:18px;
+  font-size:20px;
 }
 .bloodimg:hover{
   transform:rotate(30deg);
@@ -79,15 +92,11 @@ padding-left: 10px;}
 }
   .spanText{
     display: inline-block;
-    /* width: 40px;
-    height: 40px; */
-    /* border-radius: 50%; */
     color:red;
     font-weight:bold;
     text-align: center;
-font-size:30px ;
-padding: 0;
-
+font-size:20px ;
+margin: 0;
   }
 
   .BloodType:hover .over{
@@ -113,5 +122,9 @@ a{
   color: black;
 }
 h4{
+  z-index: 10;
   text-align: center;
+  display:block;
+  margin-right: auto;
+  
 }
