--- a/project/src/app/component/home/home.component.html
+++ b/project/src/app/component/home/home.component.html
@@ -1,27 +1,31 @@
 <navbar class="row p-0 m-0 sticky-top navtop" ></navbar>
-<div class="row container-fluid contain p-0 " 
->
-<!-- [ngClass]="{'bg_black':!getmood()}"  -->
+<!-- <div class="_contain container-fluid"></div> -->
+<div class="row container-fluid contain p-0 m-0 " 
+[ngClass]="{'bg_black':!getmood()}" >
+<div class="_contain container-fluid"></div>
 
- 
-    <app-nav-aside class="col-3 p-0 mx-1  navleft"></app-nav-aside>
-<div class="row  col-8  mx-auto mt-5 cards"  >
-
-    <div class="col-md-4  col-6 divCard mt-3 "
+    <app-nav-aside class="col-2 p-0   navleft"></app-nav-aside>
+    <div class="row px-2 col-10 m-0  mt-4 ">
+<div class="row p-0 m-0 cards">
+    <div class="col-md-3  col-6 divCard  p-3"
      *ngFor=" let b of blood">
       <a routerLink='/Users/{{b}}'>
-       
-        <div class=" BloodType row p-0 ">
+        <div class=" BloodType row p-0 m-0 ">
           <div class="over">
-            <h5 class="text-center  mt-5 pl-5 ">click to info</h5>
-          </div> 
-          <div class="bloodimg col-4">
-            <h4 class="text-center mt-1">{{b}}</h4>
+            <h5 class="text-center  mt-4 pl-5 ">click to info</h5>
           </div>
-         
-          <span class="col-12 pl-2 supscrip  ">subscribe</span><span class=" spanText mx-2">{{arr[b]}}</span>
+           <div class="bloodimg col-3 text-center p-0">
+             <!-- <h4 class="text-center mt-1">{{b}}</h4>  -->
+          </div> 
+            <h4 class="text-center mr-5 row p-0 mt-1 ml-1 ">{{b}}</h4>
+          <h6 class=" p-0 mt-3 pl-2 supscrip col-12">subscribe:
+            <span class="spanText">{{arr[b]}}</span>
+          </h6>
+          <!-- <span class=" spanText">{{arr[b]}}</span> -->
+
         </div>
       </a>
     </div>
   </div>
+    </div>
   </div>
