--- a/project/src/app/component/nav-aside/nav-aside.component.css
+++ b/project/src/app/component/nav-aside/nav-aside.component.css
@@ -6,7 +6,8 @@ aside{
   background-color: white;
   /* color: gray; */
   margin-right: 0;
-  min-height:100vh;
+  height:100%;
+  /* min-height:90vh; */
   box-shadow: 5px 10px 5px rgb(128, 128, 128,.7);
   box-sizing: border-box;
   overflow: hidden;
@@ -46,17 +47,19 @@ ul{
 }
 li{
   margin-top: 10px;
-  padding:15px;
+  padding: 0;
   text-align:left;
   display: flex;
   justify-content:space-evenly;
-  color: rgb(114, 111, 111);
+  /* color: rgb(114, 111, 111); */
+width: 100%;
+/* color: red; */
 
 }
 i{
   padding-right:20px;
 }
-li:hover {
+li:hover a{
   /* background-color:rgb(255, 0, 0,.7); */
   background-color:var(--color1);
   font-size:30px;
@@ -64,50 +67,43 @@ li:hover {
 
 }
 a{
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   width:100%;
-  color: rgb(114, 111, 111);
+  color:rgb(114, 111, 111);
   font-weight:25px;
-  padding: 0;
+    padding:15px;
+  height: 100%;
+  display: flex;
 
 }
 .active{
-  background-color:red;
+  background-color:var(--color1);
+
+  /* background-color:red; */
   color: white;
   font-size:33px;
 
 }
-/* .divsearch{
-  width:100px;
-  height: 50px;
-  border-radius: 20px;
-  border: 3px solid red;
-}
-.btnSearch{
-  width: 20px;
-  height: 20px;
-} */
-.liSearch{
-  width: 100%;
-}
+
+
 #contain_searsh{
 display: flex;
-width: fit-content;
-  height:50px;
-  /* border: 2px solid white; */
+/* width: fit-content; */
   border-radius: 10px;
 
-  /* background-color:tomato; */
-
-  /* transition: 2s 0s all ease; */
+ 
 }
-/* #contain_searsh i{
-  padding: 0;
-  padding-top:6px;
-  
-  font-size: 20px;
- float: right;
-} */
+#icone{
+  margin:0;
+  padding:0;
+  color:white;
+}
+#icone i{
+  color:white;
+}
+
 
 
 .inputSelect {
@@ -116,19 +112,24 @@ width: fit-content;
   display: inline-block;
 
   border-radius: 20px;
-  /* display:none; */
   transition: 2s 0s all ease-in-out;
-  /* float: left; */
   padding: 0;
   margin: 0;
   border: 0;
-  font-size: 20px !important;
+  font-size:20px !important;
 
+}
+.liSearch i{
+  /* font-size:25px; */
+}
+.liSearch span{
+  font-size: 20px;
 }
 .liSearch:hover .inputSelect{
   display:inline-block;
-  width:100px;
-  height: 30px;
+  width:150px;
+  height:40px;
+  
 
 }
 
