--- a/project/src/app/component/nav-aside/nav-aside.component.html
+++ b/project/src/app/component/nav-aside/nav-aside.component.html
@@ -2,46 +2,38 @@
 
   <div class="row my-2 p-0 mx-auto">
     <!-- <img class="logo" src="../../../assets/images/hand.jpg"> -->
-    <span class="logotext ">Blood Bank</span>
+    <span class="logotext pt-2">Blood Bank</span>
   </div>
   <hr class="my-4" />
-  <ul class="mx-auto ">
-    <li class="row"><a  [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Home"> <i
+  <ul class="">
+    <li class="col-12"><a  [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Home"> <i
         class="fas fa-home"></i>
 
       Home </a></li>
-      <li class="row"><a class="col-12" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Users"> <i
+      <li class="col-12"><a  [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Users"> <i
         class="fas fa-users"></i>
 
       Users </a></li>
-      <li class="row"><a class="col-12" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Allposts">
+      <li class="col-12"><a  [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Allposts">
       <i class="fas fa-poll-h"></i>
 
       Posts
     </a></li>
 
+    <li class="col-12 liSearch  d-flex">
+      <a class="col-12 px-2 m-0 d-flex py-3 pt-2">
+      <i class="fas fa-search pr-2  "></i>
+      <span class="p-0 m-0">Search</span> 
 
-    <li class="row liSearch p-1 m-0">
-      <i class="fas fa-search col-2 p-1"></i>
-       
-      <div class="col-10  m-0 p-0 ">
-      <div id="contain_searsh" class=" p-0 m-0">
-         <span> Search</span> 
 
-        <div class="row m-0 pl-2 " >
-          <select  class="inputSelect col-10 my-auto"  #optionselect>
+          <select  class="inputSelect  my-auto mx-auto"  #optionselect>
             <option *ngFor="let b of  blood"  [ngValue]="b">{{b}}</option>
-            <!-- <a  routerLink='/Users/{{optionselect}}'>
-              <i class="fas fa-search"></i></a> -->
           </select>
-          <a  (click)="submitval(optionselect.value)" class="col-2"><i class="fas fa-search"></i></a>
-        </div>
-      
-    </div> 
-  </div>
-  </li>
 
-    
+          <a (click)="submitval(optionselect.value)"id="icone"><i class="fas fa-search pl-2"></i></a>
+
+      </a>
+</li>
   </ul>
 
 </aside>
