--- a/project/src/app/component/navbar/navbar.component.html
+++ b/project/src/app/component/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 
 <div class="container-fluid p-0">
-
 <nav class="navbar navbar-expand-lg navbar-light navbg pt-1">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
     aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,36 +7,17 @@
   </button>
   <div class="collapse navbar-collapse p-1 m-0" id="navbarTogglerDemo01">
     <ul class="navbar-nav mt-lg-0  row  m-0 ">
-      <li class="logo"></li>
-
-        <!-- <li class="col-3 ">
-           <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Home">Home
-        </a></li> -->
-        <!-- <li class="col-3 mt-1">
-          <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/Users">Users
-         </a></li> -->
+      <!-- <li class="logo"></li> -->
     </ul>
-
-<!-- <div class="ml-auto row"> -->
-<!-- <button class="my-md-0  "><i class="far fa-bell notIcon"></i>
-  <span class="badge badge-secondary notNum">10</span>
-</button> -->
-  <!-- <a href="#"class="p-0  mx-md-5 my-xl-0" (click)="_authService.SignOut()">
-  <i class="fas fa-sign-out-alt logout"></i>
-  logout
-</a> -->
-
-
-  <!-- </div> -->
 </div>
 <div class="dropdown  dropleft float-right">
   <button type="button" class="btn btn-primary dropdown-toggle p-0" data-toggle="dropdown">
     <!-- Dropdown button --><span class="span_admin ">{{admin}}</span>
   </button>
   <div class="dropdown-menu ">
-    <a class="dropdown-item" routerLink='/profile'>profile</a>
-    <!-- <a class="dropdown-item" href="#">Link 2</a>
-    <a class="dropdown-item" href="#">Link 3</a> -->
+    <a class="dropdown-item" routerLink="/profile">profile</a>
+    <a class="dropdown-item" href="#">Link 2</a>
+    <a class="dropdown-item" href="#">Link 3</a>
     <div class="dropdown-divider"></div>
     <a [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/SignUp">create account</a>
     <div class="dropdown-divider"></div>
