--- a/project/src/app/component/user-details/user-details.component.css
+++ b/project/src/app/component/user-details/user-details.component.css
@@ -1,12 +1,12 @@
 .bg-img{
-  background-image: url('../../../assets/images/bg5.jpg');
+  /* background-image: url('../../../assets/images/bg5.jpg');
 background-repeat: no-repeat;
-background-size: cover;
+background-size: cover; */
 /* z-index: -10; */
 /* opacity: .7; */
-position:relative;
+/* position:relative; */
 /* height: 100vh; */
-    width: 100%;
+    /* width: 100%; */
 }
 /* h4 span{
   font-size: 20px;
