--- a/project/src/app/component/user-details/user-details.component.html
+++ b/project/src/app/component/user-details/user-details.component.html
@@ -1,9 +1,8 @@
-<!-- <div class="container-fluid  bg-img m-0 p-0 "> -->
-  <navbar></navbar>
-  <div class="container-fluid row m-0 p-0 bg-img cover">
-<app-nav-aside class="col-3 p-0 "></app-nav-aside>
+  <navbar class="sticky-top navtop container-fluid m-0 p-0"></navbar>
+  <div class="container-fluid row m-0 p-0 contain bg-img cover ">
+<app-nav-aside class="col-2 p-0 "></app-nav-aside>
 <div class=" col-8 mx-auto">
-  <h4 class=" text-center w-75 mx-auto  my-5"> users have same type blood
+  <h4 class=" text-center w-75 mx-auto  my-5">result type blood
     <span class="text-primary pt-3">{{type}}</span>
   </h4 >
   <table  class="table table-hover">
@@ -15,7 +14,7 @@
       <th>Age</th>
       <th>Email</th>
       <th>phone</th>
-      <!-- <th> options</th> -->
+      <th>Government</th>
 
     </tr>
   </thead>
@@ -26,13 +25,13 @@
 <td>{{v.age}}</td>
 <td>{{v.email}}</td>
 <td>{{v.phone}}</td>
+<td>{{v.government}}</td>
 
 </tr>
     </tbody>
   </table>
 </div>
 </div>
-<!-- </div> -->
 <!-- age: 
 26
 blood_type: 
