--- a/project/src/app/component/users/users.component.css
+++ b/project/src/app/component/users/users.component.css
@@ -2,31 +2,42 @@
   height:100vh;
 }
 ._card{
-  width:90%;
-  height:120px;
-  border-radius:5px;
-  border-top-left-radius:30%;
-  background-color:var(--color1);
+  width:100%;
+  height:80px;
+  border-radius:10px;
+  border-top-left-radius:25%;
+  background-color:rgba(255, 163, 255, 0.911);
   /* border-bottom-right-radius:5%; */
 box-sizing: border-box;
   padding: 10px;
   overflow: hidden;
   align-items: center;
+  border:2px solid violet;
 }
 ._card h6{
   color:white;
 }
 .bgtable{
-  /* background-color:orange; */
-  background-image: linear-gradient(to right,orange , yellow);
+  padding: 10px;
+  /* background-color: rgb(212, 212, 255); */
+  background-color: white;
+
   margin: 0;
   overflow: hidden;
   box-sizing: border-box;
   border-radius: 20px;
+  /* border: 2px solid rgb(91, 54, 255); */
+  /* box-shadow: 10px 7px 5px rgb(161, 160, 160);  */
+  box-shadow: 7px 10px 5px rgb(128, 128, 128,.7);
+
 }
 .htable{
-  background-color: black;
-  color: white;
+  /* background-color:black;
+  color: white; */
   padding: 0;
   margin: 0;
+}
+.bg_filter{
+  background-color:transparent;
+  border-radius: 15px;
 }
