--- a/project/src/app/component/users/users.component.html
+++ b/project/src/app/component/users/users.component.html
@@ -1,28 +1,46 @@
-<navbar class=""></navbar>
-<div class="row container-fluid p-0 m-0 " [ngClass]="{'bg_black':!bgcolor()}" >
-  <!-- <navbar class="position-sticky row p-0 m-0"></navbar> -->
+<navbar class="row p-0 m-0  "></navbar>
+<div class="row container-fluid p-0 m-0 contain" [ngClass]="{'bg_black':!bgcolor()}" >
+  <div class="container-fluid p-0 m-0 _contain"></div>
+  
+      
+  <app-nav-aside class="col-2 m-0 p-0 "></app-nav-aside>
+  <div class="col-9 mx-auto p-0 ">
+    <div class="row m-0 p-0 mt-2 d-flex justify-content-between bg_filter ">
+       <!-- <div class="_card  p-2 col-2">
+        <h6 class="p-2 mt-2"> All users : {{countuser}}</h6>
+         <button class="btn btn-primary p-1 mt-3 ml-5 ">send request</button>
+        </div>  -->
+          <app-filter class="col-9 m-0 p-0">
+          </app-filter>
+          <button class="btn col-2  p-0 m-0" (click)="getResult_search()"> Search</button>
+          <button class=" btn col-1" (click)="getmore()">more</button>
 
-  <app-nav-aside class="col-3 m-0  "></app-nav-aside>
-  <div class="col-7 p-0 ">
+        </div>
+    
 <div class="  mt-3 bgtable "> 
     <table class="table table-hover">
         <thead>
             <tr class="htable">
+              <th></th>
                 <th scope="col">Name</th>
                 <!-- <th>Age</th> -->
                 <th scope="col">Email</th>
                 <th scope="col">Blood Type</th>
                 <th scope="col">Phone</th>
+                <th scope="col">Government</th>
                 <!-- <th scope="col">Choose Option</th> -->
 
             </tr>
     </thead>
   <tbody class="table table-hover ">
-      <tr *ngFor=" let u of users" class="px-2">
+    <div *ngIf="!users" ></div>
+      <tr *ngFor=" let u of users ;index as i" class="px-2">
+        <td>{{i}}</td>
         <td>{{u.firstName}}</td>
         <td>{{u.email}}</td>
         <td>{{u.blood_type}}</td>
         <td>{{u.phone}}</td>
+        <td>{{u.government}}</td>
           <!-- <td>
             <button class="btn btn-primary" 
              (click)="sendobj(u.email)" >
@@ -35,13 +53,11 @@
     </table>
 </div>
 </div>
-<div class="col-2 p-2 m-0">
-  <div class="_card my-5 p-2">
-  <h6 class="p-2"> All users  {{countuser}}</h6>
-  <button class="btn btn-primary p-1 mt-3 ml-5 ">send request</button>
-  </div>
-</div>
-<!-- <div></div> -->
+<!-- <div class="col-1">
+<button class=" btn" (click)="getmore()">more</button>
+</div> -->
+
+
 </div>
 <!-- age: 
 25
